fix address computation in vmapbuf().  use uvm_km_valloc_prefer_wait(). call pmap_remove() explicitly in vunmapbuf(), this has been required for several years now.  fixes PR 20933.